--- a/LaboratorioFinal2/src/main/resources/enviroment.properties
+++ b/LaboratorioFinal2/src/main/resources/enviroment.properties
@@ -1,1 +1,13 @@
 ambiente=${env}
+
+# File Catalogo Peliculas
+archivoPelicula = src\\main\\resources\\peliculas.txt
+
+#File Catalogo Peliculas Output
+outputarchivoPelicula = src\\main\\resources\\peliculas_nueva.txt
+
+#File Socio Output
+outputArchivoSocio = src\\main\\resources\\peliculas_nueva_Socio.txt
+
+#File Socio
+archivoSocio = src\\main\\resources\\peliculas_Socio.txt
