--- a/src/main/resources/enviroment.properties
+++ b/src/main/resources/enviroment.properties
@@ -11,3 +11,9 @@ outputArchivoSocio = src\\main\\resources\\peliculas_nueva_Socio.txt
 
 #File Socio
 archivoSocio = src\\main\\resources\\peliculas_Socio.txt
+
+#File Alquiler
+archivoAlquiler = src\\main\\resources\\peliculas_Alquiler.txt
+
+#File Alquiler Output
+outputarchivoAlquiler = src\\main\\resources\\peliculas_nueva_alquiler.txt
