--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
         <version>3.9.1</version>
         <type>maven-plugin</type>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+    </dependency>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.14</version>
+        <scope>provided</scope>
+    </dependency>
 </dependencies>
     <version>1.3</version>
     <properties>
