PRY Gestor-Alquiler *actualizacion main *incorporacion gson file *incorporacion de interface para manejar Objetos (IEntidadVideoClub)

--- a/src/main/resources/enviroment.properties
+++ b/src/main/resources/enviroment.properties
@@ -13,7 +13,7 @@ outputArchivoSocio = src\\main\\resources\\peliculas_nueva_Socio.txt
 archivoSocio = src\\main\\resources\\peliculas_Socio.txt
 
 #File Alquiler
-archivoAlquiler = src\\main\\resources\\peliculas_Alquiler.txt
+archivoAlquiler = src\\main\\resources\\peliculas_Alquiler.json
 
 #File Alquiler Output
 outputarchivoAlquiler = src\\main\\resources\\peliculas_nueva_alquiler.txt
