--- a/microservicios-usuarios/src/main/resources/application.properties
+++ b/microservicios-usuarios/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_microservicios_examenes
-spring.datasource.username=root
-spring.datasource.password=1212
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
+# Enabling H2 Console
+spring.h2.console.enabled=true
 
